# sonr

./: .cz.toml  .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  .rgignore  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONVENTIONS.md  Caddyfile  Dockerfile  MIGRATE_CRYPTO.md  MIGRATE_HWAY.md  MIGRATE_MOTR.md  Makefile  README.md  biome.json  devbox.json  docker-compose.yml  go.mod  go.sum  install.sh  package.json  plugin.json  pnpm-lock.yaml  pnpm-workspace.yaml  process-compose.yaml  tsconfig.json  turbo.json
.github/: CI.md  CODEOWNERS  README.md  dependabot.yml  mods.yml  scopes.yml
.taskfiles/: Default.yml
app/: app.go  app_test.go  config.go  encoding.go  export.go  genesis.go  precompiles.go  sim_test.go  test_helpers.go  token_pair.go  tools.go  upgrades.go
bridge/: bridge.go  bridge_test.go  config.go  queue.go  testutils_test.go
chains/: README.md  e2e-test.json  metadata.json  registry.json  registry_assets.json  self-ibc.json  standalone.json
client/: Makefile  README.md  client.go  go.mod  go.sum
contracts/DAO/: COMPLIANCE.md  Cargo.toml  IBC_INTEGRATION.md  README.md  SECURITY_AUDIT.md
contracts/DAO/contracts/core/: Cargo.toml
contracts/DAO/contracts/core/src/: contract.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/DAO/contracts/pre-propose/: Cargo.toml
contracts/DAO/contracts/pre-propose/src/: contract.rs  lib.rs  state.rs  verification.rs
contracts/DAO/contracts/proposals/: Cargo.toml
contracts/DAO/contracts/proposals/src/: contract.rs  identity.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/DAO/contracts/voting/: Cargo.toml
contracts/DAO/contracts/voting/src/: bindings.rs  contract.rs  lib.rs  msg.rs  query.rs  state.rs  tests.rs
contracts/DAO/docs/: IMPLEMENTATION_SUMMARY.md
contracts/DAO/scripts/: build_contracts.sh  deploy-cosmos-hub.sh  deploy.sh  deploy_mainnet.sh  deploy_testnet.sh  migrate.sh  setup_ibc.sh  test-ibc-integration.sh  testnet-config.json  verify_deployment.sh
contracts/DAO/tests/e2e/: identity_dao_test.go.template
contracts/DAO/tests/integration/: did_integration_test.rs
crypto/: Makefile  README.md  go.mod  go.sum  security_test.go
docs/: changelog.mdx  docs.json  faq.mdx  features.mdx  index.mdx
proto/: Makefile  buf.gen.openapi.yaml  buf.gen.pulsar.yaml  buf.yaml
scripts/: chain-rpc-ready.sh  cli-docgen.sh  convert-swagger.js  create-genesis.sh  create-ics.sh  create-validator.sh  (+13 more)
(+1063 files in other folders)
