[workspace]
resolver = "2"
members = [
    "contracts/core",
    "contracts/voting",
    "contracts/proposals",
    "contracts/pre-propose",
    "packages/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sonr <dev@sonr.io>"]
license = "Apache-2.0"
repository = "https://github.com/sonr-io/sonr"
homepage = "https://sonr.io"
documentation = "https://sonr.dev"

[workspace.dependencies]
# CosmWasm dependencies
cosmwasm-std = { version = "2.1", features = ["stargate", "staking", "cosmwasm_2_0"] }
cosmwasm-schema = "2.1"
cw2 = "2.0"
cw-storage-plus = "2.0"
cw-utils = "2.0"

# DAO DAO dependencies for compatibility
dao-interface = "2.6"
dao-voting = "2.6"
dao-dao-macros = "2.6"
dao-pre-propose-base = "2.6"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "2.0"

# Testing
cw-multi-test = "2.1"
anyhow = "1.0"

# Shared types
identity-dao-shared = { path = "packages/shared" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.release.package.identity-dao-core]
codegen-units = 1
opt-level = 3

[profile.release.package.identity-dao-voting]
codegen-units = 1
opt-level = 3

[profile.release.package.identity-dao-proposals]
codegen-units = 1
opt-level = 3

[profile.release.package.identity-dao-pre-propose]
codegen-units = 1
opt-level = 3